--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,3 +10,8 @@ nav:
       - Overview: 02-node-express/overview.md
   - React:
       - Overview: 03-react/overview.md
+  - Slides:
+      - Slides Index: slides/index.html
+      - Web Architecture: slides/web-architecture.html
+      - Node & Express: slides/node-express.html
+      - React Basics: slides/react-basics.html 
