--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
   - Home: index.md
   - Web Foundations:
       - Overview: 01-web-foundations/overview.md
+      - HTML/CSS: 01-web-foundations/html_css_chapter.md
   - Node & Express:
       - Overview: 02-node-express/overview.md
   - React:
