--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,3 @@
-
 site_name: MERN Web Technologies
 theme:
   name: material
@@ -6,13 +5,12 @@ nav:
   - Home: index.md
   - Web Foundations:
       - Overview: 01-web-foundations/overview.md
-      - HTML/CSS: 01-web-foundations/html_css_chapter.md
-  - Node & Express:
-      - Overview: 02-node-express/overview.md
-  - React:
-      - Overview: 03-react/overview.md
-  - Slides:
-      - Slides Index: slides/index.html
-      - Web Architecture: slides/web-architecture.html
-      - Node & Express: slides/node-express.html
-      - React Basics: slides/react-basics.html 
+  - Slides: slides/index.md
+
+markdown_extensions:
+  - fenced_code
+  - codehilite
+
+extra_javascript:
+  - https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js
+  - assets/javascripts/mermaid-init.js
